Updated method of Ministry page, to allow for future expansion, fixed spacing of grid.

--- a/FPC.WebApi/css/app.css
+++ b/FPC.WebApi/css/app.css
@@ -196,7 +196,7 @@ a img:hover {
 
 .grid {
   display: grid;
-  grid-template-columns: minmax(10rem, 15rem) repeat(auto-fit, minmax(10rem, 15rem));
+  grid-template-columns: minmax(15rem, 20rem) repeat(auto-fill, minmax(8rem, 12rem));
   grid-template-rows: auto;
   grid-template-areas:
   grid-gap: 2rem;
@@ -212,7 +212,7 @@ a img:hover {
 
 .gridTitle {
   grid-column: 1;
-  grid-row-end: span 10;
+  grid-row-end: span 8;
 }
 
 .div-center {
